--- a/front/static/css/styleIndex.css
+++ b/front/static/css/styleIndex.css
@@ -1,5 +1,4 @@
 /* Reset básico para asegurar consistencia */
-
 * {
     margin: 0;
     padding: 0;
@@ -22,8 +21,8 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Ajusta la opacidad aquí (0.5 es 50%) */
-    z-index: -1; /* Coloca la capa por detrás del contenido */
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -1;
 }
 
 header {
@@ -79,100 +78,24 @@ main {
     margin: auto;
     margin-top: 50px;
     padding: 20px 10px;
-    /*box-shadow: 0 0 25px #0007;*/
     border-radius: 8px;
 }
 
-
 .card_title {
-    font-size: 60px;
+    font-size: 2.5em;
     margin: 0;
     margin-top: 10px;
 }
 
 .card_content {
-    font-size: 20px;
+    font-size: 1.25em;
     padding: 10px;
     padding-bottom: 0;
     text-align: center;
     margin-bottom: 0;
-    list-style: none;
     line-height: 1.4;
-    /*text-shadow: 0 0 5px #0007;*/
 }
 
-h2 {
-    text-align: center;
-    margin: 0;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    font-weight: 100;
-    font-size: 1.4em;
-    padding: 10px;
-}
-
-
-.form_input {
-    padding: 6px 20px;
-}
-
-input {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 6px 8px;
-    border: 1px solid #666;
-    box-shadow: 0px 0px 15px #0001;
-    background-color: transparent;
-    border-radius: 4px;
-    color: #eee;
-}
-
-label {
-    font-size: 0.9em;
-    line-height: 2;
-}
-
-fieldset {
-    border-radius: 5px;
-    border: 1px solid #666;
-    padding: 8px 6px 20px 6px;
-    margin: 20px;
-}
-
-.form_submit {
-    padding: 4px 150px;
-}
-
-.submit_button {
-    width: 200px;
-    height: 50px;
-    background-color: transparent;
-    color: #fff;
-}
-
-.about-section {
-    padding: 50px 20px;
-    max-width: 800px; /* Ajusta el ancho máximo si es necesario */
-    margin: 150px 5% 50px 5%; /* Incrementa el margen superior a 150px o el valor que prefieras */
-    color: #333;
-    border-radius: 8px;
-   /* box-shadow: 0 0 25px #0007;*/
-    text-align: left;  
-}
-.about-section h2 {
-    font-size: 2em;
-    text-align: center;
-    margin-bottom: 20px;
-    color: #fff;
-}
-
-.about-content {
-    font-size: 1.2em;
-    line-height: 1.6;
-    text-align: justify;
-    margin-bottom: 15px;
-    color: #ddd;
-}
 .footer {
     background-color: #6665;
     color: #fff;
@@ -183,3 +106,37 @@ fieldset {
     width: 100%;
 }
 
+/* Media Queries responsive */
+@media (max-width: 768px) { /*  tablets y teléfonos */
+    .navbar-nav {
+        flex-direction: column; 
+        padding: 10px; 
+    }
+
+    .navbar-nav li {
+        margin: 10px 0; 
+    }
+
+    .card {
+        width: 90%; 
+        padding: 10px; 
+    }
+
+    .card_title {
+        font-size: 2em; 
+    }
+
+    .footer {
+        padding: 10px;
+    }
+}
+
+@media (max-width: 480px) { /* dispositivos más pequeños */
+    .navbar-nav li {
+        margin: 5px 0; 
+    }
+
+    .card_title {
+        font-size: 1.5em; 
+    }
+}
