--- a/front/static/css/stylePrincipal.css
+++ b/front/static/css/stylePrincipal.css
@@ -89,3 +89,35 @@ h2 {
     bottom: 0;
     width: 100%;
 }
+
+/* Media Queries responsive */
+@media (max-width: 768px) { /* tablets y teléfonos */
+    form {
+        width: 90%; 
+        padding: 20px; 
+    }
+
+    h2 {
+        font-size: 1.5em; 
+    }
+
+    .submit_button {
+        width: 90%;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) { /* dispositivos más pequeños */
+    form {
+        padding: 15px;
+    }
+
+    h2 {
+        font-size: 1.2em; 
+    }
+
+    .submit_button {
+        width: 100%;
+        font-size: 12px;
+    }
+}
