--- a/front/static/css/styleMantenimientos.css
+++ b/front/static/css/styleMantenimientos.css
@@ -2,7 +2,7 @@ body {
     position: relative; 
     font-family: "SUSE", sans-serif;
     color: #eee;
-    background: url('../images/mantenimiento.jpg') center / cover fixed;
+    background: url('../images/fondoInicio.jpg') center / cover fixed;
     min-height: 100vh;
     margin: 0;
 }
@@ -14,7 +14,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); 
+    background: rgba(0, 0, 0, 0.5); /* Ajusta la opacidad aquí (0.5 es 50%) */
     z-index: -1;
 }
 
@@ -48,7 +48,7 @@ h1 {
     background-color: #ee4040;
 }
 
-
+/* Estilo para la tabla de mantenimientos */
 table {
     width: 90%;
     margin: 20px auto;
@@ -98,9 +98,9 @@ select {
     color: #eee;
     font-size: 16px;
     box-shadow: 0px 0px 15px rgb(0, 0, 0);
-    appearance: none; 
-    -webkit-appearance: none; 
-    -moz-appearance: none; 
+    appearance: none; /* Remueve el estilo por defecto del navegador */
+    -webkit-appearance: none; /* Remueve el estilo en navegadores WebKit */
+    -moz-appearance: none; /* Remueve el estilo en navegadores Mozilla */
     cursor: pointer;
 }
 
@@ -110,32 +110,9 @@ label{
 }
 select:focus {
     outline: none;
-   
+    /*border-color: #ee4040; /* color al enfocar */
 }
-
-.filtros {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-    margin-bottom: 20px;
-    padding: 0 20px;
-}
-
-
-.btn-agregar {
-    background-color: #ee4040;
-    color: #fff;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 4px;
-    margin: 0; 
-    transition: background-color 0.3s ease;
-}
-
-.btn-agregar:hover {
-    background-color: #cc3333; 
-}
-
+/* Estilos responsivos */
 @media (max-width: 768px) {
     table {
         width: 100%;
