--- a/front/static/css/styleMantenimientos.css
+++ b/front/static/css/styleMantenimientos.css
@@ -33,15 +33,28 @@ h1 {
     font-weight: 700;
 }
 
+.filtros {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    padding: 0 20px;
+    margin-bottom: 20px;
+}
+
+.agregar-mantenimiento {
+    display: flex;
+    justify-content: flex-end; 
+    padding: 0 20px;
+}
+
 .btn-agregar {
     background-color: rgb(74, 73, 73);
     color: #fff;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 4px;
-    display: inline-block;
-    margin: 20px 0;
     transition: background-color 0.3s ease;
+    display: inline-block;
 }
 
 .btn-agregar:hover {
