--- a/front/static/css/styleMantenimientos.css
+++ b/front/static/css/styleMantenimientos.css
@@ -33,14 +33,6 @@ h1 {
     font-weight: 700;
 }
 
-.filtros {
-    display: flex;
-    align-items: center; /* Alinea verticalmente los elementos */
-    justify-content: space-between; /* Separa el filtro del botón */
-    margin-bottom: 20px;
-    padding: 0 20px;
-}
-
 .filtros label {
     margin-right: 10px;
     font-size: 1.2em;
@@ -52,6 +44,21 @@ h1 {
     margin-right: auto; /* Deja el espacio entre el select y el botón */
 }
 
+.filtros {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Alinea los elementos a los extremos */
+    margin-bottom: 20px;
+    padding: 0 20px;
+    position: relative; /* Permite posicionamiento absoluto del botón */
+}
+
+.filtro-container {
+    display: flex;
+    align-items: center; /* Alinea verticalmente los elementos */
+    justify-content: flex-start; /* Alinea el filtro a la izquierda */
+}
+
 .btn-agregar {
     background-color: rgb(74, 73, 73);
     color: #fff;
@@ -59,12 +66,16 @@ h1 {
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-    display: inline-block;
+    position: absolute; /* Posición absoluta para el botón */
+    right: 20px; /* Ajusta la posición desde la derecha */
+    top: 50%; /* Centrado verticalmente */
+    transform: translateY(-50%); /* Ajusta el centro */
 }
 
 .btn-agregar:hover {
     background-color: #ee4040;
 }
+
 
 /* Estilo para la tabla de mantenimientos */
 table {
