--- a/front/static/css/styleForms.css
+++ b/front/static/css/styleForms.css
@@ -107,6 +107,38 @@ legend {
 .submit_button:hover {
     background-color: #ee4040; /* Cambia el color de fondo al pasar el mouse */
 }
+/* Estilo para los mensajes de error */
+.error {
+    color: red;
+    font-size: 0.9em;
+    display: none; /* Ocultos por defecto */
+}
+
+/* Estilo para los mensajes flash */
+.flashes {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.flashes li {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
+.flashes li.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.flashes li.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
 
 /* Media Queries responsive */
 @media (max-width: 768px) { /* tablets y teléfonos */
