--- a/front/static/css/stylePrincipal.css
+++ b/front/static/css/stylePrincipal.css
@@ -89,6 +89,29 @@ h2 {
     bottom: 0;
     width: 100%;
 }
+.flashes {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.flashes li {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
+.flashes li.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.flashes li.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
 
 /* Media Queries responsive */
 @media (max-width: 768px) { /* tablets y teléfonos */
