--- a/front/static/css/styleNuevoMantenimiento.css
+++ b/front/static/css/styleNuevoMantenimiento.css
@@ -88,7 +88,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 20px 0;
 }
 
-.submit_button {
+.form_submit .submit_button {
     width: 200px;
     height: 50px;
     background-color: rgb(74, 73, 73);
